[package]
name = "c_art_2_volume_changes"
version = "0.1.0"
edition = "2021"
authors = ["Tom Vercauteren"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Application to compute the volume changes between the consecutive treatment phases."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"
log = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
simple_logger = "4.2.0"
